# ledger

./: .gitattributes  .gitignore  README.md  deploy.sh  update-reports.sh
app/: README.md  index.html  package-lock.json  package.json  vite.config.js
app/cpp_backend/: CMakeLists.txt  build.sh  get_deps.sh  ledger_api_config.json  run.sh
app/cpp_backend/include/: api_handler.h  config.h  ledger_manager.h
app/cpp_backend/src/: api_handler.cpp  ledger_manager.cpp  main.cpp
app/server/: index.js  package.json
app/src/: App.svelte  routes.js
app/src/components/: Header.svelte  Sidebar.svelte
app/src/pages/: AddEntry.svelte  Balance.svelte  Budget.svelte  Cleared.svelte  Dashboard.svelte  EditEntry.svelte  Register.svelte
